# atlas-ai-recruiter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0dade65449d2_create_candidates_table.py  20260706_initial_audit_event.py  62308f1418af_create_resumes_table.py  718f149f6a92_create_companies_table.py  84006b1fde4b_create_recruitment_tables.py  de3f7fc634b3_create_jobs_table.py  ee8d6bd456d0_create_users_table.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/orchestration/: __init__.py
backend/app/ai/prompts/: __init__.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: auth.py  users.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/database/: mixins.py  session.py
backend/app/domain/: __init__.py
backend/app/domain/repositories/: user_repository.py
backend/app/domain/services/: auth_service.py
backend/app/integrations/: __init__.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  application.py  audit_event.py  candidate.py  company.py  document.py  job.py  resume.py  user.py
backend/app/modules/: __init__.py
backend/app/modules/recruiter/: __init__.py
backend/app/scheduler/: __init__.py
backend/app/schemas/: auth.py
backend/app/workers/: __init__.py  worker.py
backend/tests/: __init__.py  test_health.py
