[project]
name = "atlas-ai-recruiter"
version = "0.1.0"
description = "Production-ready backend foundation for Atlas AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "black>=24.10.0",
  "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
